# cnumpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: sequential_access.cpp
include/cnumpy/: ndarray.hpp  npy.hpp
tests/: fixed_ndarray.cpp  ndarray_misc.cpp  npy_saveload.cpp  npy_saveload.py  variable_ndarray.cpp
